@@ -1,3 +1,9 @@
+2002-02-01  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/Makefile.am: include the *.sh scripts
+
+	* gconf/regenerate-enum-footer.sh: fix screwup that broke build
+
 2002-02-01  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/Makefile.am: move the complicated enum rules into small
